kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: trials
  name: trials-service
spec:
  replicas: 1
  selector: { }
  template:
    spec:
      serviceAccountName: build-robot
      containers:
        - name: trials-api
          image: pjpuebla.azurecr.io/trialsservice:0.0.1
          ports:
            - name: http
              containerPort: 8888
          readinessProbe:
            httpGet:
              path: /rest/actuator/health
              port: 8888
