kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: trials
  name: trials-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8888
