kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trials-service-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /custompath
            pathType: Prefix
            backend:
              service:
                name: trials-service
                port:
                  number: 80
  tls:
    - secretName: trials-service-cert
      hosts:
        - example.com
